--- a/client/src/index.html
+++ b/client/src/index.html
@@ -29,7 +29,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/js/mdb.min.js"></script>
 </head>
 
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 
